--- a/LocHoiNhom/LocHoiNhom/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/LocHoiNhom/LocHoiNhom/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{20B63936-EE44-4110-9988-50381B418FE6}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>TaiAnhNettruyen</RootNamespace>
-    <AssemblyName>TaiAnhNettruyen</AssemblyName>
+    <RootNamespace>QuetBaiDang</RootNamespace>
+    <AssemblyName>QuetBaiDang</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>skin_rita_bunny_sm.ico</ApplicationIcon>
+    <ApplicationIcon>social_facebook_box_blue_256_30649.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.9.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
@@ -55,6 +55,9 @@
     </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Bcl.AsyncInterfaces.5.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Pkcs11Interop, Version=5.1.1.0, Culture=neutral, PublicKeyToken=c10e9c2d8c006d2a, processorArchitecture=MSIL">
       <HintPath>packages\Pkcs11Interop.5.1.1\lib\net45\Pkcs11Interop.dll</HintPath>
@@ -150,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="skin_rita_bunny_sm.ico" />
+    <Content Include="social_facebook_box_blue_256_30649.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Selenium.WebDriver.4.7.0\build\Selenium.WebDriver.targets" Condition="Exists('packages\Selenium.WebDriver.4.7.0\build\Selenium.WebDriver.targets')" />
