--- a/LocHoiNhom/LocHoiNhom/WindowsFormsApp1/packages.config
+++ b/LocHoiNhom/LocHoiNhom/WindowsFormsApp1/packages.config
@@ -4,6 +4,7 @@
   <package id="GemBox.Spreadsheet" version="47.0.1071" targetFramework="net472" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Pkcs11Interop" version="5.1.1" targetFramework="net472" />
   <package id="RestSharp" version="108.0.3" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="4.7.0" targetFramework="net472" />
